# audiobook-binder

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: audiobook_m4b_converter.md
src/audiobook/: __init__.py  cli.py  converter.py  manifest.py  metadata.py  models.py  probe.py
src/audiobook_binder/: __init__.py  cli.py  converter.py  manifest.py  metadata.py  probe.py
tests/: conftest.py  test_converter.py  test_manifest.py  test_metadata.py  test_probe.py
